# VulcanAMI_LLM

./: .bandit  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  ANSWER_IS_IT_CONCEPTUAL.md  API_ENDPOINT_MAPPING.md  API_INTEGRATION_FIX_SUMMARY.md  ARCHITECTURE_CONSOLIDATION_COMPLETE.md  ARCHITECTURE_DIAGRAMS.md  ARENA_RESILIENCE_FINAL_SUMMARY.md  ARENA_RESILIENCE_IMPROVEMENTS.md  ARENA_RESILIENCE_SECURITY_SUMMARY.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_COMPLETION_SUMMARY.txt  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_README.md  AUTH_SETUP.md  BANDIT_SUMMARY.md  BIN_TEST_COVERAGE_REPORT.md  BUG_FIXES_SUMMARY.md  BUILD_SIMULATION_REPORT.md  CAN_IT_BE_RUN.md  CAPABILITIES_SUMMARY.md  CICD_REVIEW_SUMMARY.md  CICD_TESTING_SUMMARY.md  CI_CD.md  CI_CD_IMPACT_ANALYSIS.md  CLEANUP_SUMMARY.md  CODE_AUDIT.md  CODE_QUALITY_DEEP_DIVE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_PLATFORM_ARCHITECTURE.md  COMPREHENSIVE_FIX_SUMMARY.md  COMPREHENSIVE_REPO_OVERVIEW.md  CRITICAL_FIXES_COMPLETE.md  (+222 more)
.github/: dependabot.disabled.yml
api/: README.md  index.html  swagger.yml
archive/: adaptive_semantic_executor.py  classifier.json  deployment_config.yaml  full_v2.3.0_suite.json  gemini_evolution_proposal.json  key_manager.py  orchestrator.py  pipeline.json  symbolic_reasoning.py  test_demo_evolution.py
build_simulation_20251206_150355/: summary.txt
build_simulation_20251206_150411/: summary.txt
checkpoints/: checkpoint_auto_0.pkl  checkpoint_auto_0_metadata.json  checkpoint_final_0.pkl  checkpoint_final_0_metadata.json  checkpoint_gen4.json
client_sdk/: graphix_client.py
config/: __init__.py  distillation_config.py  evaluation_prompts.json  reasoning.yaml
configs/: README.md  adversarial_testing_schedule.json  auto_apply_policy.yaml  crew_config.yaml  ethical_boundaries.yaml  generation_config.yaml  graphix_core_manifest.json  graphix_core_ontology.json  hardware_profiles.json  helm_chart.yaml  intrinsic_drives.json  objective_estimates.json  objectives.json  platform_mapping.json  platform_mapping.yaml  profile_development.json  profile_testing.json  reasoning_thresholds.yaml  runtime.yaml  test_integration.py  tool_selection.yaml  type_system_manifest.json  validate_configs.py
curriculum_states/: curriculum_structure.json
data/: agent_state.json  attack_patterns.json  learnable_bigram_best.json  learnable_bigram_best.json.broken  llm_best.json  llm_meta_state.json  meta_state.json  tiny_corpus.txt
demo/: artifact_card.html  demo_evolution.py  demo_graphix.py  preference_slider.html
demos/: DEMO_1_AUTONOMOUS_REASONING.md  DEMO_2_PRIVACY_PRESERVING_UNLEARNING.md  DEMO_3_SELF_IMPROVING_GOVERNANCE.md  omega_phase1_survival.py  omega_phase2_teleportation.py  omega_phase3_immunization.py  omega_phase4_csiu.py  omega_phase5_unlearning.py  omega_sequence_realistic.py  sse_mind.html  vulcan_chat.html
docs/: AI_OPS.md  AI_TRAINING_GUIDE.md  API_DOCUMENTATION.md  API_MODEL_MIGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_PLAN.md  ARENA_FOR+GRAPHIX.md  AUTONOMOUS_LEARNING_ANALYSIS.md  AZURE_SETUP_GUIDE.md  BACKLOG.md  CI_CD.md  CLI_USAGE.md  CODE_QUALITY_REQUIREMENTS.md  COMPLETE_DEEP_DIVE_ANALYSIS.md  COMPLETE_PLATFORM_ARCHITECTURE.md  COMPLETE_SERVICE_CATALOG.md  COMPREHENSIVE_REPO_OVERVIEW.md  CONCEPT.md  CONFIGURATION.md  CONFIGURATION_GUIDE.md  CONFIG_FILES.md  CONSOLIDATION_CHECKLIST.md  DEMONSTRATION_GUIDE.md  DEMO_ADAPTER.md  DEMO_GUIDE.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT.md  DIAGNOSTIC_REPORT_MEMORY_AND_ROUTING.md  DOCKER_BUILD_GUIDE.md  EASY_DEMO_GUIDE.md  EVOLUTION_ROADMAP.MD  EXECUTION_ENGINE.md  FINAL_DELIVERY_SUMMARY.md  FIXES_REASONING_ISSUES.md  FIX_SUMMARY.md  GOVERNANCE.md  HELM_DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  (+62 more)
examples/: distillation_example.py  groth16_demo.py  platform_integration_demo.py
exp_probe_1p34m/: llm_best_model.json  llm_meta_state.json
graphs/: mutator.json  sentiment_3d.json
interpretability_logs/: relational_trace_1624756921104_2025-10-23T17-47-02.454958.json  relational_trace_2023890769488_2025-10-23T20-54-43.457036.json  relational_trace_2314056583280_2025-10-23T20-03-25.304155.json  relational_trace_2485752779120_2025-10-23T16-40-52.965249.json  relational_trace_2615805323536_2025-10-23T18-16-58.832053.json  relational_trace_2776778947824_2025-10-23T18-01-00.710370.json
keystore/: validation_agent_key.json
nso_aligner_logs/: audit.db.backup  nso_modification_log.json  nso_modification_log.md
omega_demo_output/: compliance_report_1763830847.json  compliance_report_1763830888.json  compliance_report_1763830950.json  omega_demo_1763830894.json  omega_demo_1763830956.json  zk_proof_1763830851.json  zk_proof_1763830892.json  zk_proof_1763830954.json
output/: evolution_cycle_results.json
perf/: baseline.json  boundedness.json  boundedness.md
scripts/: README.md  __init__.py  audit_module_usage.py  bootstrap_knowledge.py  check-prerequisites.sh  check_self_healing.py  clear_cache.py  compare_perf.py  demo_orchestrator.py  deploy.sh  fix_bare_excepts.py  generate-secrets.sh  health_smoke.py  load_test.py  monitor_distillation.py  omega_sequence_demo.py  parse_logs.py  platform_adapter.py  run_adapter_demo.py  run_scheduled_tests.sh  run_sentiment_tournament.py  scheduled_adversarial_testing.py  validate-all.sh  validate-deployment.sh  validate_metaprogramming.sh  verify_deployment.py  verify_installation.py
src/: __init__.py  adversarial_tester.py  agent_interface.py  agent_registry.py  ai_providers.py  analog_photonic_emulator.py  api_gateway.py  api_server.py  audit_log.py  auto_ml_nodes.py  chat_endpoint.py  consensus_engine.py  consensus_manager.py  data_augmentor.py  distributed_sharder.py  dqs_service.py  drift_detector.py  env_utils.py  evolution_engine.py  explainability_node.py  feedback_protocol.py  formal_grammar.md  full_platform.py  gemini_evolution_proposal.json  generate_transparency_report.py  governance_loop.py  graph_aware_evolution.py  graphix_arena.py  grok_generative_ai_node_proposal.json  hardware_dispatcher.py  (+31 more)
(+1271 files in other folders)
