[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulcan-agi"
version = "2.0.0"
description = "VULCAN-AGI: Volumetric Unified Learning Cognitive Architecture Network"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VULCAN-AGI Team", email = "team@vulcan-agi.dev"}
]
keywords = ["agi", "artificial-intelligence", "cognitive-architecture", "vulcan", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.98.0",
    "faker>=24.0.0",
    "py-ecc>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
]
# Lite-full: Dependencies for CI performance tests (fast install, no heavy deps)
# Use: pip install -e ".[perf-lite]"
perf-lite = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
    "statsmodels>=0.14.0",
    "sympy>=1.12",
    "pandas>=2.0.0",
    "PyYAML>=6.0",
    "Whoosh>=2.7.4",
    "python-dotenv>=1.0.0",
]
# Full perf: All reasoning/ML dependencies (heavy, use for nightly/extended tests)
# Use: pip install -e ".[perf-full]"
perf-full = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
    "statsmodels>=0.14.0",
    "sympy>=1.12",
    "pandas>=2.0.0",
    "PyYAML>=6.0",
    "Whoosh>=2.7.4",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]

[project.urls]
Homepage = "https://github.com/musicmonk42/VulcanAMI_LLM"
Documentation = "https://github.com/musicmonk42/VulcanAMI_LLM#readme"
Repository = "https://github.com/musicmonk42/VulcanAMI_LLM"
Issues = "https://github.com/musicmonk42/VulcanAMI_LLM/issues"

[project.scripts]
vulcan-verify = "scripts.verify_installation:main"

# CRITICAL: Package configuration for 'import src' support
# This enables importing modules with 'from src.vulcan.orchestrator import ...'
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
namespaces = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-q",
    "--disable-warnings",
]
testpaths = ["tests", "src/vulcan/tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::coverage.exceptions.CoverageWarning",
]

[tool.coverage.run]
source = ["src/vulcan", "src/gvulcan"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/archive/*",
    "archive/*",
    "**/archive/**",
    "*/.venv/*",
    "*/venv/*",
    "*/.tox/*",
]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
skip_empty = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = ["archive", ".venv", "venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["archive", "tests"]